#2309 Minor cleanup.